--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,7 +50,7 @@ task run(type: Exec) {
         }
         def sdkDir = properties.getProperty('sdk.dir')
         if (sdkDir) {
-            path = sdkDir
+            path = "$System.env.ANDROID_HOME"
         } else {
             path = "$System.env.ANDROID_HOME"
         }
